--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}" />
     <meta name="keywords" content="elettronica,robotica,informatica,fai da te,hacking" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/animate.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/w3.css" />
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/bootstrap.min.css' | absolute_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/animate.css' | absolute_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | absolute_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/w3.css' | absolute_url }}" />
 </head>
