--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@ og_type: webpage
 
     </div>
 
-    <script type= "text/javascript" src="/assets/js/jquery.min.js"></script>
-    <script type= "text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type= "text/javascript" src="{{ '/assets/js/jquery.min.js' | absolute_url }}"></script>
+    <script type= "text/javascript" src="{{ '/assets/js/bootstrap.min.js' | absolute_url }}"></script>
 
 </body>
 </html>
