--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,24 +2,24 @@
     <h4>News</h4>
 
     <a href="/corsi/corsi.php">
-        <img align="left" src="https://www.ivotek.it/images/ne2.gif" border="0" width="32" height="20"> Aggiunto il link sul corso per la programmazione di microcontrollori Arduino Uno.<br>
+        <img align="left" src="{{ '/assets/images/ne2.gif' | absolute_url }}" border="0" width="32" height="20"> Aggiunto il link sul corso per la programmazione di microcontrollori Arduino Uno.<br>
     </a>
 
     <p>
         <a href="/corsi/corsi.php">
-            <img align="left" src="https://www.ivotek.it/images/ne2.gif" border="0" width="32" height="20"> Aggiunta il link al corso Linux Uno su Udemy.<br>
+            <img align="left" src="{{ '/assets/images/ne2.gif' | absolute_url }}" border="0" width="32" height="20"> Aggiunta il link al corso Linux Uno su Udemy.<br>
         </a>
 
         <a href="/elettronica/progetti/arcade.php">
-            <img align="left" src="https://www.ivotek.it/images/ne2.gif" border="0" width="32" height="20"> Aggiunto il tutorial per la realizzazionedi un Arcade con materiale di riciclo.<br>
+            <img align="left" src="{{ '/assets/images/ne2.gif' | absolute_url }}" border="0" width="32" height="20"> Aggiunto il tutorial per la realizzazionedi un Arcade con materiale di riciclo.<br>
         </a>
 
         <a href="/corsi/index.php">
-            <img align="left" src="https://www.ivotek.it/images/ne2.gif" border="0" width="32" height="20"> Aggiunta la sezione corsi.<br>
+            <img align="left" src="{{ '/assets/images/ne2.gif' | absolute_url }}" border="0" width="32" height="20"> Aggiunta la sezione corsi.<br>
         </a>
 
         <a href="/robotica/poor_v2/TELEMETRIA.php">
-            <img align="left" src="https://www.ivotek.it/images/ne2.gif" border="0" width="32" height="20"> Aggiunto il programma sulla telemetria (in fase di sviluppo).<br>
+            <img align="left" src="{{ '/assets/images/ne2.gif' | absolute_url }}" border="0" width="32" height="20"> Aggiunto il programma sulla telemetria (in fase di sviluppo).<br>
         </a>
 
 </div> <!-- chiudo le news -->
